--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ main header::before{
     top: -60px;
     width: 100%;
     height: 200px;
-    background-image: url("/images/pattern-circles.svg");
+    background-image: url("images/pattern-circles.svg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
